--- a/src/index.css
+++ b/src/index.css
@@ -92,19 +92,79 @@
     padding: 10px;
   }
   
-  .autoRotate{
-    /* animation: autoRotateAnimation 3s linear infinite; */
-    /* animation-timeline: view(); */
-    animation: autoShowAnimation both;
-}
-@keyframes autoRotateAnimation{
-    from{
-        transform: rotate(0deg);
-    }
-    to{
-        transform: rotate(360deg);
-    }
-}
+    *{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  body{
+    background-color: #D2D2D2;
+    scroll-behavior: smooth;
+    /* background-image: url(/public/model.png); */
+    background-image:
+    repeating-linear-gradient(
+        to right, transparent 0 100px,
+        #25283b22 100px 101px
+    ),
+    repeating-linear-gradient(
+        to bottom, transparent 0 100px,
+        #25283b22 100px 101px
+    );
+  }
+  
+
+   body::before {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    content: '';
+    background-image: url(/public/model.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    pointer-events: none;
+    z-index: -1;
+  }
+  
+  body::after {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    content: '';
+    background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent black overlay */
+    pointer-events: none;
+    z-index: -1;
+  }
+  
+  /* .tab{
+    background-color: transparent;
+    backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(20px);
+    background-image: linear-gradient(
+      120deg,
+      rgba(255, 255, 255, 0.3),
+      rgba(0, 0, 0, 0.2)
+    );
+    background-size: 10px;
+  } */
+  .tab {
+    background-color: transparent;
+    backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(20px);
+    background-image: linear-gradient(
+      120deg,
+      rgba(255, 255, 255, 0.3),
+      rgba(0, 0, 0, 0.2)
+    );
+    background-size: 10px;
+    border-radius: 10px; /* Adjust the value to make the edges more or less round */
+    padding: 20px; /* Adjust the value to add more or less padding */
+  }
+
 .autoShow{
     animation: autoShowAnimation both;
     animation-timeline: view(70% 5%);
